[gd_scene load_steps=3 format=2]

[ext_resource path="res://slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://box_ui.gd" type="Script" id=2]

[node name="box_ui" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -12.0
margin_right = 40.0
margin_bottom = 12.0
custom_constants/separation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot1" parent="." instance=ExtResource( 1 )]

[node name="slot2" parent="." instance=ExtResource( 1 )]
margin_left = 16.0
margin_right = 32.0

[node name="slot3" parent="." instance=ExtResource( 1 )]
margin_left = 32.0
margin_right = 48.0

[node name="slot4" parent="." instance=ExtResource( 1 )]
margin_left = 48.0
margin_right = 64.0

[node name="slot5" parent="." instance=ExtResource( 1 )]
margin_left = 64.0
margin_right = 80.0
